--- a/sextoTrimestre/proyecto/src/app/components/marlon/vista-instructor/vista-instructor.component.css
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/vista-instructor/vista-instructor.component.css
@@ -1,172 +1,184 @@
-/* Estilos de la barra lateral */
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-
-.sidebar {
-    width: 200px;
-    background-color: #088a88;
-    padding: 5px;
-    position: fixed;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    z-index: 2;
-    overflow-y: auto;
-}
-
-.sidebar ul {
-    margin: 10px;
-    margin-top: 30px;
-}
-
-.sidebar ul li {
-    margin-bottom: 25px;
-}
-
-.sidebar ul li a span.material-symbols-outlined {
-    vertical-align: middle;
-    margin-right: 10px;
-}
-
-.sidebar ul li a {
-    color: #ffffff;
-    font-weight: normal;
-}
-
-h2 {
-    text-align: left;
-    font-family: 'Lobster', sans-serif;
-    margin: 10px;
-    color: #ffffff;
-    font-size: 28px;
-    margin-bottom: 50px;
-}
-
-ul {
-    margin-top: 50px;
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    margin-right: -75px;
-}
-
-li {
-    list-style: none;
-    padding: 0px;
-    margin: 10px;
-    font-size: 15px;
-}
-
-a {
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-}
-
-.navbar {
-    background-color: #088a88;
-    padding: 3px;
-}
-
-.navbar-brand {
-    margin-left: -60px;
-    color: #ffffff;
-    font-family: 'Lobster', sans-serif;
-    font-size: 25px;
-    font-weight: normal;
-}
-
-.navbar-nav .nav-link {
-    color: white;
-    font-weight: normal;
-}
-
-/* Estilos de menu de opciones */
-.bi-gear {
-    margin-right: 5px;
-    background-color: #fff;
-    color: #e0e0e0;
-}
-
-.bi-gear::before {
-    content: "\e988"; 
-    font-family: "bi";
-    margin-right: 5px;
-}
-
-/* Estilos para el submenú */
-.nav-item .submenu {
-    display: none;
-    position: absolute;
-    background-color: #fff;
-    color:  #088a88;
-    min-width: 120px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    z-index: 1;
-    left: 70.625rem;
-}
-
-.nav-item:hover .submenu {
-    display: block;
-}
-
-.nav-item .submenu li {
-    padding: 10px;
-    text-align: center;
-}
-
-.nav-item .submenu li:hover {
-    background-color: #f2f2f2;
-}
-
-.color{
-    color: #088a88;
-}
-
-
-/* Estilos de la sección de bienvenida */
-.welcome-container {
-    background-color: #fff;
-    border-radius: 10px;
-    
-    margin-top: 40px;
-    padding: 20px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Protest+Riot&display=swap');
 
 .titulo {
-    font-size: 32px;
+    color: #008a88;
     font-weight: bold;
-    background: #088a88;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    color: white;
-}
-
-.subtitulo {
-    font-size: 22px;
-    color: #101111;
-}
-
-.descripcion {
-    font-size: 18px;
-    color: #333;
-}
-
-.image-container img {
-    border-radius: 8px;
-}
-
-.welcome-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.text-content {
-    flex: 1;
     text-align: left;
+    margin-left: 180px;
+    margin-top: 10%;
+    font-family: "Outfit", sans-serif;
+    font-size: 46px;
+    font-style: normal;
+}
+.sub-titulo{
+    font-weight: bold;
+    text-align: left; 
+    margin-left: 325px;
+    margin-top: 30px;
+    font-size: 20px;
+}
+.descripción {
+    font-size: medium;
+    font-weight: bold;
+    text-align: justify;
+    margin-top: 10px;
+    margin-left: 18%;
+    width: 300px; 
+    height: 425px;
 }
 
-.image-container {
-    flex-shrink: 0;
-    margin-left: 20px;
+.imagen {
+    margin-top: -290px;
+    margin-left: 350px;
+    height: 450px;
+    width: 500px;
+    border-radius: 10px;
+}
+
+/* Estilos Nav */
+nav{
+  background-color: #008a88;
+}
+
+/* Estilos para el menú hamburguesa */
+.nav .nav-item {
+  cursor: pointer;
+  margin-bottom: 5px;
+}
+
+.nav-link {
+  color: white;
+}
+
+.nav-link:hover{
+  color: rgb(255, 255, 255);
+}
+.nombre{
+  padding: 10px;
+  color: white;
+  font-size: 25px;
+  font-family: 'Lobster',sans-serif;
+}
+
+.menu-icon {
+  cursor: pointer;
+  display: none;
+}
+
+.menu-icon .bar {
+  width: 20px;
+  height: 3px;
+  background-color: white;
+  margin: 6px 0;
+}
+
+/* Estilos para mostrar el menú cuando isMenuOpen es verdadero */
+.show-menu .menu-icon {
+  display: block;
+}
+
+.show-menu .nav {
+  display: flex;
+  flex-direction: column;
+}
+
+.show-menu .nav-item {
+  margin: 10px 0;
+}
+
+/* Estilos para el menú hamburguesa en pantallas más pequeñas (500px o menos) */
+@media (max-width: 700px) {
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .nav {
+    display: none;
+  }
+
+  .menu-icon {
+    cursor: pointer;
+    display: block;
+    margin-right: 20px;
+  }
+
+  /* Estilos para mostrar el menú en pantallas pequeñas */
+  .show-menu .nav {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .show-menu .nav-item {
+    margin: 0px 0;
+  }
+
+  .show-menu{
+    display: block;
+  }
+}
+
+/* Estilo del dropdown */
+.otro {
+  color: #008a88;
+}
+button {
+  color: #fff;
+}
+
+.dropdown-content { 
+  display: none;
+  margin-top: 06px;
+  position: absolute;
+  min-width: 160px;
+  border-radius: 10px; /* Añadido para esquinas redondas */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  cursor: pointer;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  left: -110px; 
+}
+
+.dropdown-button {
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    background-color: #008a88;
+}
+
+.dropdown-item {
+  padding: 10px;
+  text-decoration: none;
+  display: block;
+  color: #333;
+}
+
+.dropdown-item:hover {
+  background-color: #0f0f0f;
+}
+
+@media screen and (max-width: 600px) {
+  .titulo {
+      margin-left: 20%;
+      font-size: 200%;
+  }
+
+  .sub-titulo {
+      margin-left: 30%;
+  }
+
+  .descripción {
+      margin-left: 15%;
+  }
+
+  .imagen {
+      margin-top: -20vw;
+      margin-left: 10%;
+      height: 70%;
+      width: 80%;
+  }
 }
