--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-actividad/ver-actividad.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-actividad/ver-actividad.component.scss
@@ -46,7 +46,7 @@
   color: #262626;
 }
 
-/* Estilos Nav */
+//* Estilos Nav */
 nav{
   background-color: #008a88;
 }
@@ -59,6 +59,10 @@ nav{
 
 .nav-link {
   color: white;
+}
+
+.nav-link:hover{
+  color: rgb(14, 13, 13);
 }
 .nombre{
   padding: 10px;
@@ -94,7 +98,7 @@ nav{
 }
 
 /* Estilos para el menú hamburguesa en pantallas más pequeñas (500px o menos) */
-@media (max-width: 601px) {
+@media (max-width: 700px) {
   .navbar {
     display: flex;
     justify-content: space-between;
@@ -125,33 +129,24 @@ nav{
   }
 }
 
-
 /* Estilo del dropdown */
 .otro {
   color: #008a88;
 }
 button {
   color: #fff;
-  }
-  
-.dropdown {
-  position: relative;
-  display: inline-block;
 }
 
 .dropdown-content { 
-  display: none;
-  margin-top: 06px;
+  margin-top: 7px;
   position: absolute;
-  min-width: 160px;
-  border-radius: 10px; /* Añadido para esquinas redondas */
+  right: 0;
+  margin-right: 5px;
+  background-color: #fff; /* Color de fondo */
+  border: 1px solid #ccc; /* Borde del menú */
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-  left: -110px; 
+  border-radius: 10px; 
+  padding: 10px;
 }
 
 .dropdown-button {
@@ -169,5 +164,6 @@ button {
 }
 
 .dropdown-item:hover {
-  background-color: #008a88;
+  background-color: #070707;
 }
+
