--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-asistencia/ver-asistencia.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-asistencia/ver-asistencia.component.scss
@@ -1,9 +1,5 @@
-.nombre{
-    font-weight: bold;
-}
-.nav-img{
-    width: 50px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Protest+Riot&display=swap');
 
 .subtitulo{
     color: #0a7775;
@@ -39,6 +35,10 @@ nav{
 .nav-link {
   color: white;
 }
+
+.nav-link:hover{
+  color: rgb(14, 13, 13);
+}
 .nombre{
   padding: 10px;
   color: white;
@@ -73,7 +73,7 @@ nav{
 }
 
 /* Estilos para el menú hamburguesa en pantallas más pequeñas (500px o menos) */
-@media (max-width: 601px) {
+@media (max-width: 700px) {
   .navbar {
     display: flex;
     justify-content: space-between;
@@ -104,7 +104,6 @@ nav{
   }
 }
 
-
 /* Estilo del dropdown */
 .otro {
   color: #008a88;
@@ -112,24 +111,17 @@ nav{
 button {
   color: #fff;
 }
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
 
 .dropdown-content { 
-  display: none;
-  margin-top: 06px;
+  margin-top: 7px;
   position: absolute;
-  min-width: 160px;
-  border-radius: 10px; /* Añadido para esquinas redondas */
+  right: 0;
+  margin-right: 5px;
+  background-color: #fff; /* Color de fondo */
+  border: 1px solid #ccc; /* Borde del menú */
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-  left: -110px; 
+  border-radius: 10px; 
+  padding: 10px;
 }
 
 .dropdown-button {
@@ -147,5 +139,5 @@ button {
 }
 
 .dropdown-item:hover {
-  background-color: #008a88;
+  background-color: #070707;
 }
