--- a/sextoTrimestre/proyecto/src/app/components/marlon/vista-instructor/vista-instructor.component.css
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/vista-instructor/vista-instructor.component.css
@@ -52,7 +52,7 @@ nav{
 }
 
 .nav-link:hover{
-  color: rgb(255, 255, 255);
+  color: rgb(14, 13, 13);
 }
 .nombre{
   padding: 10px;
@@ -128,19 +128,15 @@ button {
 }
 
 .dropdown-content { 
-  display: none;
-  margin-top: 06px;
+  margin-top: 7px;
   position: absolute;
-  min-width: 160px;
-  border-radius: 10px; /* Añadido para esquinas redondas */
+  right: 0;
+  margin-right: 5px;
+  background-color: #fff; /* Color de fondo */
+  border: 1px solid #ccc; /* Borde del menú */
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  cursor: pointer;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-  left: -110px; 
+  border-radius: 10px; 
+  padding: 10px;
 }
 
 .dropdown-button {
@@ -158,8 +154,9 @@ button {
 }
 
 .dropdown-item:hover {
-  background-color: #0f0f0f;
+  background-color: #070707;
 }
+
 
 @media screen and (max-width: 600px) {
   .titulo {
