--- a/sextoTrimestre/proyecto/src/app/components/marlon/perfil/perfil.component.css
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/perfil/perfil.component.css
@@ -1,48 +1,54 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Protest+Riot&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
+.titulo {
+  margin-top: 30px;
+  margin-left: 600px;
+  color: #088a88;
+  font-family: "Outfit", sans-serif;
+  font-weight: bolder;
+  font-size: 50px;
+  font-style: normal;
+}
+
+/*Perfil*/
 .perfil-detalle {
-    background-color: #fff;
-    padding: 30px;
-    border-radius: 8px;
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
-    width: 80%;
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+  margin-left: 350px;
+  margin-top: 50px;
+  height: 450px;
+  max-width: 700px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+.foto {
+  margin-left: -300px;
+  margin-top: 30px;
+  border: 1px solid #ccc;
+  border-radius: 50%;
 }
 
-.card-img-top.small-centered {
-    border-radius: 50%;
-    max-width: 150px; 
-    margin: 0 auto;
-    display: block;
+.information{
+  font-size: 15px;
+  margin-left: 350px;
+  margin-top: -220px;
+  text-align: left;
 }
 
-  
-.nav-img{
-    width: 40px;
-    align-items: center;
-    display: block; 
-  
+.font-weight-bold{
+  font-weight: bold;
 }
 
-.nav-link{
-    color: #008a88;
+span {
+  font-weight: normal;
 }
 
-.navbar {
-    display: flex;
-    align-items: center;
+/*Botones*/
+.botones{
+  margin: 30px;
 }
-
-.nombre {
-    font-weight: bold;
-    flex-grow: 15; 
-    text-align: center; 
-}
-
-button {
+.boton {
     margin: 10px;
     background-color: #088a88;
     color: #fff; 
@@ -53,18 +59,173 @@ button {
     transition: background-color 0.3s;
   }
   
- 
-  .button:hover {
-    background-color: #159997;
+  .boton:hover {
+    background-color: #0f9b98; 
   }
 
-.information{
-    text-align: left;
+/* Estilos Nav */
+nav{
+  background-color: #008a88;
+}
+button {
+  color: #fff;
+  }
+/* Estilos Nav */
+nav{
+  background-color: #008a88;
 }
 
-h1 {
-    font-weight: bold;
-    flex-grow: 15; 
-    text-align: center; 
-    color: #088a88;
+/* Estilos para el menú hamburguesa */
+.nav .nav-item {
+  cursor: pointer;
+  margin-bottom: 5px;
+}
+
+.nav-link {
+  color: white;
+}
+
+.nav-link:hover{
+  color: rgb(255, 255, 255);
+}
+.nombre{
+  padding: 10px;
+  color: white;
+  font-size: 25px;
+  font-family: 'Lobster',sans-serif;
+}
+
+.menu-icon {
+  cursor: pointer;
+  display: none;
+}
+
+.menu-icon .bar {
+  width: 20px;
+  height: 3px;
+  background-color: white;
+  margin: 6px 0;
+}
+
+/* Estilos para mostrar el menú cuando isMenuOpen es verdadero */
+.show-menu .menu-icon {
+  display: block;
+}
+
+.show-menu .nav {
+  display: flex;
+  flex-direction: column;
+}
+
+.show-menu .nav-item {
+  margin: 10px 0;
+}
+
+/* Estilos para el menú hamburguesa en pantallas más pequeñas (500px o menos) */
+@media (max-width: 700px) {
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .nav {
+    display: none;
+  }
+
+  .menu-icon {
+    cursor: pointer;
+    display: block;
+    margin-right: 20px;
+  }
+
+  /* Estilos para mostrar el menú en pantallas pequeñas */
+  .show-menu .nav {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .show-menu .nav-item {
+    margin: 0px 0;
+  }
+
+  .show-menu{
+    display: block;
+  }
+}
+
+
+/* Estilo del dropdown */
+.otro {
+  color: #008a88;
+}
+button {
+  color: #fff;
+}
+
+.dropdown-content { 
+  display: none;
+  margin-top: 06px;
+  position: absolute;
+  min-width: 160px;
+  border-radius: 10px; /* Añadido para esquinas redondas */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  cursor: pointer;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  left: -110px; 
+}
+
+.dropdown-button {
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    background-color: #008a88;
+}
+
+.dropdown-item {
+  padding: 10px;
+  text-decoration: none;
+  display: block;
+  color: #333;
+}
+
+.dropdown-item:hover {
+  background-color: #0f0f0f;
+}
+
+@media screen and (max-width: 700px) {
+  /* Estilos específicos para pantallas de 700 píxeles o menos */
+  .titulo {
+    margin-left: 30%;
+  }
+
+  .perfil-detalle {
+    margin-left: 20%;
+    margin-top: 5%;
+    max-width: 70%;
+    height: 80%;
+  }
+
+  .foto {
+    margin-left: -5%;
+    margin-top: 5%;
+  }
+
+  .information {
+    margin-left: 0%;
+    margin-top: 5%;
+    text-align: center;
+  }
+
+  .botones {
+    margin: 5%;
+  }
+
+  .boton {
+    margin: 1%;
+    padding: 1% 2%;
+  }
 }
