--- a/sextoTrimestre/proyecto/src/app/components/marlon/perfil/perfil.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/perfil/perfil.component.html
@@ -1,54 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ACCANER</title>
-    <link rel="icon" type="icon" href="../../assets/imagenes/LOGO ACANNER SIN FONDO.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <style>
-        .titulo {
-            font-size: 32px;
-            font-weight: bold;
-            background: linear-gradient(120deg, #00aaff, #aa00ff);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-        .subtitulo {
-            font-size: 24px;
-        }
-        .descripcion {
-            font-size: 18px;
-        }
-    </style>
-</head>
-<body>
-<header class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" routerLink="/marlon">
-            <img src="../../assets/imagenes/LOGO SIN FONDO.png" alt="Logo de la página" width="40" height="40">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/vista-instructor">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" (click)="logout()">Cerrar Sesión</a>
-                </li>
-            </ul>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<nav class="navbar">
+  <div class="container-fluid">
+    <a class="nav-link nombre" >Acanner</a>
+        <div class="menu-icon" (click)="toggleMenu()">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
         </div>
-    </div>
-</header>
-      <div class="perfil-detalle">
-        <h1 class="display-4">Tu Perfil </h1>
-        <div class="container">
-          <div class="container-user">
-              <img src="assets/imagenes/perfil_sena.png" alt="Imagen" class="card-img-top small-centered">
-        <div id="perfil" class="information">
+        <ul [ngClass]="{'nav': true, 'show-menu': isMenuOpen}">
+            <li class="nav-item">
+              <a routerLink="/blog" class="nav-link" aria-current="page">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/horario" class="nav-link">Horarios</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/actividad" class="nav-link">Actividades</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/asistencia" class="nav-link">Asistencias</a>
+            </li>
+            <div class="dropdown">
+              <button class="dropdown-button">
+                <span class="material-symbols-outlined">person</span>
+              </button>
+              <div class="dropdown-content">
+                <li class="nav-item">
+                  <a routerLink="/vista-instructor" class="nav-link otro ">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a routerLink="/estadisticas" class="nav-link otro ">Estadísticas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link otro" (click)="logout()">Cerrar Sesión</a>
+                </li>
+              </div>
+            </div>
+        </ul>
+  </div>
+</nav>
+<h1 class="titulo">Tu perfil</h1>
+<div class="perfil-detalle">
+  <div class="container">
+    <img class="foto"  [src]="usuario.fotoPerfil" alt="Foto de perfil">
+    <div id="perfil" class="information">
           <p class="font-weight-bold">Primer Nombre: <span id="primerNombre">{{ userData.primerNombre }}</span></p>
           <p class="font-weight-bold">Segundo Nombre: <span id="segundoNombre">{{ userData.segundoNombre }}</span></p>
           <p class="font-weight-bold">Primer Apellido: <span id="primerApellido">{{ userData.primerApellido }}</span></p>
@@ -59,10 +54,12 @@
           <p class="font-weight-bold">Número de Celular: <span id="celular">{{ userData.celular }}</span></p>
           <p class="font-weight-bold">Información Académica: <span id="informacionAcademica">{{ userData.informacionAcademica }}</span></p>
           <p class="font-weight-bold">Información Adicional: <span id="informacionAdicional">{{ userData.informacionAdicional }}</span></p>
-
-        </div>
-        <button class="button1" (click)="editarInformacion()">Editar</button>
-        <button class="button2" [routerLink]="['/cambiar-contrasena']">Cambiar contraseña</button>
+    </div>
+          <div class="botones">
+            <button class="boton"  (click)="abrirSelectorDeImagen()">Cambiar Foto</button>
+              <input type="file" (change)="onImagenSeleccionada($event)" style="display: none" id="inputFile">
+            <button class="boton" (click)="editarInformacion()">Editar</button>
+            <button  class="boton" [routerLink]="['/edit-password']">Cambiar contraseña</button>
+          </div>
       </div>
     </div>
-  </div>
