--- a/sextoTrimestre/proyecto/src/app/components/marlon/editar-perfil/editar-perfil.component.css
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/editar-perfil/editar-perfil.component.css
@@ -14,17 +14,17 @@
 
 .card-img-top.small-centered {
     border-radius: 50%;
-    max-width: 150px; 
+    max-width: 150px;
     margin: 0 auto;
     display: block;
 }
 
-  
+
 .nav-img{
     width: 40px;
     align-items: center;
-    display: block; 
-  
+    display: block;
+
 }
 
 .navbar {
@@ -34,22 +34,22 @@
 
 .nombre {
     font-weight: bold;
-    flex-grow: 15; 
-    text-align: center; 
+    flex-grow: 15;
+    text-align: center;
 }
 
 button {
     margin: 10px;
     background-color: #088a88;
-    color: #fff; 
-    padding: 10px 20px; 
+    color: #fff;
+    padding: 10px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s;
   }
-  
- 
+
+
   .button:hover {
     background-color: #159997;
   }
@@ -60,7 +60,18 @@ button {
 
 h1 {
     font-weight: bold;
-    flex-grow: 15; 
-    text-align: center; 
+    flex-grow: 15;
+    text-align: center;
     color: #088a88;
 }
+
+.error-message {
+  background-color: rgba(235, 74, 74, 0.7);
+  color: white;
+  font-size: 14px;
+  margin: 8px auto;
+  width: 50%;
+  text-align: center;
+  padding: 8px;
+}
+
