--- a/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.css
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.css
@@ -152,20 +152,142 @@ nav{
   
   .btn-primary {
     margin-top: 10px;
-    background-color: #008a88; /* Color del botón */
+    background-color: #008a88;
     border: none;
   }
   
   .btn-primary:hover {
-    background-color: #008a88; /* Color al pasar el ratón sobre el botón */
+    background-color: #008a88; 
   }
   
   .mostrar{
     margin-top: 30px;
     margin-left: 50px;
   }
+  .card-img-top {
+    max-width: 200px; 
+    height: auto; 
+  }
+  .blogs-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); 
+    gap: 18px; 
+  }
+  
+  .card {
+    border: 2px solid #ccc; 
+    border-radius: 10px; 
+  }
+  .card-title{
+    color: #0f0f0f;
+  }
+  .card-buttons {
+    display: flex;
+    justify-content: space-between; 
+    margin-top: 10px; 
+  }
+  
+  .card-buttons button {
+    padding: 0; 
+    margin: 0; 
+    color: #008a88; 
+  }
+  
+  .card-buttons button:hover {
+    color: #005c5a; 
+  }
+
+.card-title, .card-text {
+  color: black;
+}
 
 
+.btn-link {
+  color: #000; 
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease; 
+}
+
+.btn-link:hover {
+  color: #333; 
+}
+
+.btn-primary,
+.btn-secondary {
+  color: #fff; 
+  background-color: #008a88; 
+  border: none;
+  border-radius: 5px; 
+  padding: 0.5rem 1rem;
+  margin-right: 5px;
+  transition: background-color 0.3s ease; 
+}
+
+.btn-primary:hover,
+.btn-secondary:hover {
+  background-color: #005b59; 
+}
 
 
+.form-group {
+  display: flex;
+  justify-content: space-between;
+}
 
+
+.btn-cancelar {
+  color: #fff; 
+  background-color: #ff0000; 
+  border: none;
+  border-radius: 5px; 
+  padding: 0.5rem 1rem; 
+  transition: background-color 0.3s ease; 
+}
+
+.btn-cancelar:hover {
+  background-color: #cc0000; 
+}
+.card-date {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 12px;
+  color: #252525; 
+}
+.container {
+  margin-top: 40px;
+  box-shadow: 0 5px 9px rgba(5, 5, 5, 0.1);
+  padding: 20px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  width: 700px;
+}
+
+.form-group {
+  margin-bottom: 13px; 
+}
+
+label {
+  font-weight: bold;
+  display: block; 
+}
+
+input[type="text"],
+textarea {
+  width: 90%; 
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+.btn-primary {
+  margin-top: 10px;
+  background-color: #008a88;
+  border: none;
+}
+
+.btn-primary:hover {
+  background-color: #005b59;
+}
