--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.html
@@ -44,6 +44,7 @@
 
 <div class="noticias-container">
   <div *ngFor="let blog of newsList" class="instagram-div">
+    <p class="date">{{ blog.fechaPublicacion | date:'dd/MM/yyyy' }}</p>
     <h1 class="titulo">{{ blog.nombre }}</h1>
     <img src="assets/imagenes/Blog.png" class="card-img-top" alt="Imagen Opcional">
     <p class="card-text"><strong>Descripción:</strong> {{ blog.comentario }}</p>
