--- a/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.html
@@ -71,7 +71,7 @@
               <form (ngSubmit)="updateBlog()" #editBlogForm="ngForm">
                 <div class="form-group">
                   <label for="titulo">Título:</label>
-                  <input type="text" class="form-control" id="titulo" name="titulo" [(ngModel)]="editingBlog.titulo" required>
+                  <input type="text" class="form-control" id="titulo" name="titulo" [(ngModel)]="editingBlog.nombre" required>
                 </div>
                 <div class="form-group">
                   <label for="comentario">Comentario:</label>
