--- a/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.css
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.css
@@ -164,10 +164,7 @@ nav{
     margin-top: 30px;
     margin-left: 50px;
   }
-  .card-img-top {
-    max-width: 200px; 
-    height: auto; 
-  }
+  
   .blogs-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); 
@@ -203,7 +200,10 @@ nav{
 
 
 .btn-link {
-  color: #000; 
+  border: none;
+  border-radius: 5px;
+  color: #f5f5f5; 
+  background-color: #005b59;
   text-decoration: none;
   font-weight: bold;
   transition: color 0.3s ease; 
@@ -290,4 +290,19 @@ textarea {
 
 .btn-primary:hover {
   background-color: #005b59;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center; 
+}
+
+.button-container button {
+  margin: 0 5px; 
+}
+
+.card-img-top {
+  max-width: 200px;
+  height: auto;
+  margin: 0 auto; 
 }
