lista instructores con la nueva info

--- a/sextoTrimestre/proyecto/src/app/components/sergio/statistics-instructores/statistics-instructores.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/statistics-instructores/statistics-instructores.component.html
@@ -30,6 +30,8 @@
           <th>Fecha de Nacimiento</th>
           <th>Ficha</th>
           <th>Correo</th>
+          <th>Fecha de ingreso</th>
+          <th>Celular</th>
         </tr>
       </thead>
       <tbody>
@@ -40,6 +42,8 @@
           <td>{{ instructor.fechaNacimiento }}</td>
           <td>{{ instructor.numeroFicha }}</td>
           <td>{{ instructor.correo }}</td>
+          <td>{{ instructor.fechaIngreso }}</td>
+          <td>{{ instructor.celular }}</td>
         </tr>
       </tbody>
     </table>
