Actualizaciones Front Aprendiz e instructor

--- a/sextoTrimestre/proyecto/src/app/components/marlon/asistencia/asistencia.component.css
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/asistencia/asistencia.component.css
@@ -1,24 +1,159 @@
-.list-group-item a, .list-group-item button {
-    margin-right: 10px;
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Protest+Riot&display=swap');
+/* Estilos Nav */
+nav{
+  background-color: #008a88;
 }
-  
 
-.btn-primary-ver-archivo {
-    background-color: #008a88;
-    border-color: #008a88;
-    color: #fff; 
+/* Estilos para el menú hamburguesa */
+.nav .nav-item {
+  cursor: pointer;
+  margin-bottom: 5px;
 }
-  
-  
-.btn-primary, .btn-success {
-    background-color: #008a88;
-    border-color: #008a88;
-    color: #fff; 
-}
-  
 
-.btn-secondary {
-    background-color: #ff0000;
-    border-color: #ff0000;
-    color: #fff; 
+.nav-link {
+  color: white;
 }
+
+.nav-link:hover{
+  color: rgb(14, 13, 13);
+}
+
+.nombre{
+  padding: 10px;
+  color: white;
+  font-size: 25px;
+  font-family: 'Lobster',sans-serif;
+}
+
+.menu-icon {
+  cursor: pointer;
+  display: none;
+}
+
+.menu-icon .bar {
+  width: 20px;
+  height: 3px;
+  background-color: white;
+  margin: 6px 0;
+}
+
+/* Estilos para mostrar el menú cuando isMenuOpen es verdadero */
+.show-menu .menu-icon {
+  display: block;
+}
+
+.show-menu .nav {
+  display: flex;
+  flex-direction: column;
+}
+
+.show-menu .nav-item {
+  margin: 10px 0;
+}
+
+/* Estilos para el menú hamburguesa en pantallas más pequeñas (500px o menos) */
+@media (max-width: 700px) {
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .nav {
+    display: none;
+  }
+
+  .menu-icon {
+    cursor: pointer;
+    display: block;
+    margin-right: 20px;
+  }
+
+  /* Estilos para mostrar el menú en pantallas pequeñas */
+  .show-menu .nav {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .show-menu .nav-item {
+    margin: 0px 0;
+  }
+
+  .show-menu{
+    display: block;
+  }
+}
+
+/* Estilo del dropdown */
+.otro {
+  color: #008a88;
+}
+button {
+  color: #fff;
+}
+
+.dropdown-content { 
+  margin-top: 7px;
+  position: absolute;
+  right: 0;
+  margin-right: 5px;
+  background-color: #fff; /* Color de fondo */
+  border: 1px solid #ccc; /* Borde del menú */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  border-radius: 10px; 
+  padding: 10px;
+}
+
+.dropdown-button {
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    background-color: #008a88;
+}
+
+.dropdown-item {
+  padding: 10px;
+  text-decoration: none;
+  display: block;
+  color: #333;
+}
+
+.dropdown-item:hover {
+  background-color: #070707;
+}
+
+/*Crear Horario*/
+.container {
+    margin-top: 40px;
+    box-shadow: 0 5px 9px rgba(5, 5, 5, 0.1); 
+    padding: 20px; 
+    background-color: #ffffff; 
+    border-radius: 10px; 
+    width: 700px;
+  }
+  
+  .subir{
+    margin-top: 20px;
+  }
+  .titulo{
+    color: #008a88;
+    font-size: 30px;
+    font-weight: bold
+  }
+  .subtitulo {
+    margin-top: 40px;
+    margin-left: 50px;
+    margin-right: 50px;
+    color: #008a88;
+    font-size: 30px;
+    font-weight: bold; 
+  }
+  
+  label {
+    font-weight: bold;
+  }
+  
+  .boton{
+    background-color: #008a88;
+    color: white;
+  }
