--- a/sextoTrimestre/proyecto/src/app/components/katalina/edit-password/edit-password.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/edit-password/edit-password.component.html
@@ -1,53 +1,62 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<nav class="navbar">
   <div class="container-fluid">
-    <img src="assets/imagenes/LOGO SIN FONDO.png" class="nav-img" alt="icono">
-    <div class="navbar">
-      <div class="navbar">
+    <a class="nav-link nombre" >Acanner</a>
         <div class="menu-icon" (click)="toggleMenu()">
           <div class="bar"></div>
           <div class="bar"></div>
           <div class="bar"></div>
         </div>
         <ul [ngClass]="{'nav': true, 'show-menu': isMenuOpen}">
-          <li class="nav-item">
-            <a routerLink="/perfil-detalle" class="nav-link active" aria-current="page">
-              <i class="fas fa-user"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="/indexKatalina" class="nav-link">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="/ver-blog" class="nav-link active" aria-current="page">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="/ver-actvidades" class="nav-link">Actividades</a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="/ver-asistencias" class="nav-link">Asistencias</a>
-          </li>
+            <li class="nav-item">
+              <a routerLink="/ver-blog" class="nav-link" aria-current="page">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/ver-horarios" class="nav-link">Horarios</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/ver-actvidades" class="nav-link">Actividades</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/ver-asistencias" class="nav-link">Asistencias</a>
+            </li>
+            <div class="dropdown">
+              <button class="dropdown-button" (click)="toggleProfileMenu()">
+                <span class="material-symbols-outlined">person</span>
+              </button>
+              <div class="dropdown-content" *ngIf="mostrarMenuPerfil" >
+                <li class="nav-item">
+                  <a routerLink="/perfil-detalle" class="nav-link otro " aria-current="page">Ver Perfil</a>
+                </li>
+                <li class="nav-item">
+                  <a routerLink="/estadisticas" class="nav-link otro ">Estadísticas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link otro" (click)="logout()">Cerrar Sesión</a>
+                </li>
+              </div>
+            </div> 
         </ul>
-      </div>
-    </div>
   </div>
 </nav>
-  <div class="container">
-    <h2>Cambiar Contraseña</h2>
-    <form [formGroup]="cambiarContrasenaForm" (ngSubmit)="cambiarContrasena()">
-      <div class="form-group">
-        <label for="contrasenaAntigua">Contraseña Antigua</label>
-        <input type="password" class="form-control" id="contrasenaAntigua" formControlName="contrasenaAntigua" required>
-      </div>
-      <div class="form-group">
-        <label for="contrasenaNueva">Contraseña Nueva</label>
-        <input type="password" class="form-control" id="contrasenaNueva" formControlName="contrasenaNueva" required>
-      </div>
-      <div class="form-group">
-        <label for="confirmarContrasena">Confirmar Contraseña</label>
-        <input type="password" class="form-control" id="confirmarContrasena" formControlName="confirmarContrasena" required>
-      </div>
-      <div class="alert alert-danger" *ngIf="mensaje">{{ mensaje }}</div>
-      <button type="submit" class="btn btn-primary">Cambiar Contraseña</button>
-    </form>
-  </div>
+<div class="contraseña">
+  <h2 class="titulo">Cambiar Contraseña</h2>
+  <form [formGroup]="form" (ngSubmit)="cambiarContrasena()">
+    <div class="form-group">
+      <label for="passwordAnterior">Contraseña Antigua</label>
+      <input type="password" class="form-control" id="passwordAnterior" formControlName="passwordAnterior" required>
+    </div>
+    <div class="form-group">
+      <label for="contrasenaNueva">Contraseña Nueva</label>
+      <input type="password" class="form-control" id="contrasenaNueva" formControlName="nuevaPassword" required>
+    </div>
+    <div class="form-group">
+      <label for="confirmarPassword">Confirmar Contraseña</label>
+      <input type="password" class="form-control" id="confirmarPassword" formControlName="confirmarPassword" required>
+    </div>
+    <div class="alert alert-danger" *ngIf="mensaje">{{ mensaje }}</div>
+    <button type="submit" class="btn btn-primary boton">Cambiar Contraseña</button>
+  </form>
+</div>
+<img class="imagen" src="assets/imagenes/cambiocon.jpg" alt="Cambio Contraseña">
+
