--- a/sextoTrimestre/proyecto/src/app/components/marlon/actividad/actividad.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/actividad/actividad.component.html
@@ -1,32 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <title>Actividad</title>
-</head>
-<body>
-    <header class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" routerLink="/vista-instructor">
-                <img src="../../assets/imagenes/LOGO SIN FONDO.png" alt="Logo de la página" width="51" height="50">
-                A C A N N E R
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    
-                </ul>
-            </div>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<nav class="navbar">
+  <div class="container-fluid">
+    <a class="nav-link nombre" >Acanner</a>
+        <div class="menu-icon" (click)="toggleMenu()">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
         </div>
-    </header>
-  <div class="container mt-5">
-    <div class="row justify-content-center">
-      <div class="col-md-8">
-        <h3 class="titulo">Crear Actividad</h3>
+        <ul [ngClass]="{'nav': true, 'show-menu': isMenuOpen}">
+            <li class="nav-item">
+              <a routerLink="/vista-instructor" class="nav-link" aria-current="page">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/horario" class="nav-link">Horarios</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/blog" class="nav-link">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/asistencia" class="nav-link">Asistencias</a>
+            </li>
+            <div class="dropdown">
+              <button class="dropdown-button" (click)="toggleProfileMenu()">
+                <span class="material-symbols-outlined">person</span>
+              </button>
+              <div class="dropdown-content" *ngIf="mostrarMenuPerfil" >
+                <li class="nav-item">
+                  <a routerLink="/perfil" class="nav-link otro " aria-current="page">Ver Perfil</a>
+                </li>
+                <li class="nav-item">
+                  <a routerLink="/estadisticas" class="nav-link otro ">Estadísticas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link otro" (click)="logout()">Cerrar Sesión</a>
+                </li>
+              </div>
+            </div> 
+        </ul>
+  </div>
+</nav> 
+    <div class="container">
+      <h2 class="titulo">Crear Actividad</h2>
         <form (ngSubmit)="createActivity(form)" #form="ngForm">
           <div class="form-group">
             <label for="nombreArchivo">Nombre del archivo:</label>
@@ -42,9 +56,11 @@
             <textarea [(ngModel)]="newActivity.comentario" name="comentario" class="form-control" required></textarea>
           </div>
           <br>
-          <button type="submit" class="btn btn-primary">Guardar</button>
+          <button type="submit" class="btn btn-primary boton">Guardar</button>
         </form>
-        <h2 class="subtitulo mt-5">Actividades</h2>
+      </div>
+
+        <h2 class="subtitulo">Lista Actividades</h2>
         <ul class="list-group">
           <li class="list-group-item" *ngFor="let activity of activityList">
             <ng-container *ngIf="!editingActivity || activity.id !== editingActivity.id; else editTemplate">
@@ -66,11 +82,4 @@
             </ng-template>
           </li>
         </ul>
-      </div>
-    </div>
-  </div>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+ 
