--- a/sextoTrimestre/proyecto/src/app/components/marlon/cambiar-password/cambiar-password.component.css
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/cambiar-password/cambiar-password.component.css
@@ -1,45 +1,145 @@
-.perfil-detalle {
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Protest+Riot&display=swap');
+/* Estilos Nav */
+nav{
+  background-color: #008a88;
+}
+
+/* Estilos para el menú hamburguesa */
+.nav .nav-item {
+  cursor: pointer;
+  margin-bottom: 5px;
+}
+
+.nav-link {
+  color: white;
+}
+
+.nav-link:hover{
+  color: rgb(14, 13, 13);
+}
+
+.nombre{
+  padding: 10px;
+  color: white;
+  font-size: 25px;
+  font-family: 'Lobster',sans-serif;
+}
+
+.menu-icon {
+  cursor: pointer;
+  display: none;
+}
+
+.menu-icon .bar {
+  width: 20px;
+  height: 3px;
+  background-color: white;
+  margin: 6px 0;
+}
+
+/* Estilos para mostrar el menú cuando isMenuOpen es verdadero */
+.show-menu .menu-icon {
+  display: block;
+}
+
+.show-menu .nav {
+  display: flex;
+  flex-direction: column;
+}
+
+.show-menu .nav-item {
+  margin: 10px 0;
+}
+
+/* Estilos para el menú hamburguesa en pantallas más pequeñas (500px o menos) */
+@media (max-width: 700px) {
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .nav {
+    display: none;
+  }
+
+  .menu-icon {
+    cursor: pointer;
+    display: block;
+    margin-right: 20px;
+  }
+
+  /* Estilos para mostrar el menú en pantallas pequeñas */
+  .show-menu .nav {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .show-menu .nav-item {
+    margin: 0px 0;
+  }
+
+  .show-menu{
+    display: block;
+  }
+}
+
+/* Estilo del dropdown */
+.otro {
+  color: #008a88;
+}
+button {
+  color: #fff;
+}
+
+.dropdown-content { 
+  margin-top: 7px;
+  position: absolute;
+  right: 0;
+  margin-right: 5px;
+  background-color: #fff; /* Color de fondo */
+  border: 1px solid #ccc; /* Borde del menú */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  border-radius: 10px; 
+  padding: 10px;
+}
+
+.dropdown-button {
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    background-color: #008a88;
+}
+
+.dropdown-item {
+  padding: 10px;
+  text-decoration: none;
+  display: block;
+  color: #333;
+}
+
+.dropdown-item:hover {
+  background-color: #070707;
+}
+
+/*Cambiar Contraseña*/
+
+.contraseña {
     background-color: #fff;
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
     max-width: 500px;
-    width: 80%;
+    height: 380px;
     position: absolute;
     top: 55%;
-    left: 50%;
+    left: 30%;
     transform: translate(-50%, -50%);
     text-align: center;
 }
 
-.card-img-top.small-centered {
-    border-radius: 50%;
-    max-width: 150px; 
-    margin: 0 auto;
-    display: block;
-}
-
-  
-.nav-img{
-    width: 40px;
-    align-items: center;
-    display: block; 
-  
-}
-
-.navbar {
-    display: flex;
-    align-items: center;
-}
-
-.nombre {
-    font-weight: bold;
-    flex-grow: 15; 
-    text-align: center; 
-}
-
-button {
-    margin: 10px;
+  .boton {
+    margin-top: 30px;
     background-color: #088a88;
     color: #fff; 
     padding: 10px 20px; 
@@ -48,19 +148,29 @@ button {
     cursor: pointer;
     transition: background-color 0.3s;
   }
-  
- 
-  .button:hover {
-    background-color: #159997;
+  .boton:hover {
+    background-color: #073332;
   }
 
 .information{
     text-align: left;
 }
-
-h1 {
+label {
     font-weight: bold;
-    flex-grow: 15; 
-    text-align: center; 
-    color: #088a88;
+}
+input{
+    margin-top: 10px;
+}
+.titulo{
+    color: #008a88;
+    font-size: 30px;
+    font-weight: bold
+  }
+
+  .imagen {
+    margin-top: 100px;
+    margin-left: 700px;
+    height: 350px;
+    width: 400px;
+    border-radius: 10px;
 }
