--- a/sextoTrimestre/proyecto/src/app/components/marlon/cambiar-password/cambiar-password.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/cambiar-password/cambiar-password.component.html
@@ -1,47 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ACCANER</title>
-    <link rel="icon" type="icon" href="../../assets/imagenes/LOGO ACANNER SIN FONDO.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <style>
-        .titulo {
-            font-size: 32px;
-            font-weight: bold;
-            background: linear-gradient(120deg, #00aaff, #aa00ff);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-        .subtitulo {
-            font-size: 24px;
-        }
-        .descripcion {
-            font-size: 18px;
-        }
-    </style>
-</head>
-<body>
-<header class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" routerLink="/marlon">
-            <img src="../../assets/imagenes/LOGO SIN FONDO.png" alt="Logo de la página" width="40" height="40">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/vista-instructor">Inicio</a>
-                </li>
-            </ul>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<nav class="navbar">
+  <div class="container-fluid">
+    <a class="nav-link nombre" >Acanner</a>
+        <div class="menu-icon" (click)="toggleMenu()">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
         </div>
-    </div>
-</header>
-<div class="perfil-detalle">
-    <h2>Cambiar Contraseña</h2>
+        <ul [ngClass]="{'nav': true, 'show-menu': isMenuOpen}">
+            <li class="nav-item">
+              <a routerLink="/horario" class="nav-link" aria-current="page">Horario</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/actividad" class="nav-link">Actividades</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/blog" class="nav-link">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/asistencia" class="nav-link">Asistencias</a>
+            </li>
+            <div class="dropdown">
+              <button class="dropdown-button" (click)="toggleProfileMenu()">
+                <span class="material-symbols-outlined">person</span>
+              </button>
+              <div class="dropdown-content" *ngIf="mostrarMenuPerfil" >
+                <li class="nav-item">
+                  <a routerLink="/vista-instructor" class="nav-link otro " aria-current="page">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a routerLink="/estadisticas" class="nav-link otro ">Estadísticas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link otro" (click)="logout()">Cerrar Sesión</a>
+                </li>
+              </div>
+            </div> 
+        </ul>
+  </div>
+</nav> 
+<div class="contraseña">
+    <h2 class="titulo">Cambiar Contraseña</h2>
     <form [formGroup]="form" (ngSubmit)="cambiarContrasena()">
       <div class="form-group">
         <label for="passwordAnterior">Contraseña Antigua</label>
@@ -55,9 +54,7 @@
         <label for="confirmarPassword">Confirmar Contraseña</label>
         <input type="password" class="form-control" id="confirmarPassword" formControlName="confirmarPassword" required>
       </div>
-     
-      <button type="submit" class="btn btn-primary">Cambiar Contraseña</button>
+      <button type="submit" class="btn btn-primary boton">Cambiar Contraseña</button>
     </form>
   </div>
-</body>
-</html>
+  <img class="imagen" src="assets/imagenes/Contraseña.jpg" alt="Cambio Contraseña">
