--- a/sextoTrimestre/proyecto/src/app/components/marlon/perfil/perfil.component.css
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/perfil/perfil.component.css
@@ -13,16 +13,16 @@
 
 .perfil-detalle {
   margin-left: 350px;
-  margin-top: 50px;
+  margin-top: 40px;
   height: 450px;
-  max-width: 700px;
+  max-width: 800px;
   background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 .foto {
-  margin-left: -300px;
+  margin-left: -400px;
   margin-top: 30px;
   border: 1px solid #ccc;
   border-radius: 50%;
@@ -62,139 +62,128 @@ span {
     background-color: #0f9b98;
   }
 
-/* Estilos Nav */
-nav{
-  background-color: #008a88;
-}
-button {
-  color: #fff;
+  /* Estilos Nav */
+  nav{
+    background-color: #008a88;
   }
-/* Estilos Nav */
-nav{
-  background-color: #008a88;
-}
-
-/* Estilos para el menú hamburguesa */
-.nav .nav-item {
-  cursor: pointer;
-  margin-bottom: 5px;
-}
-
-.nav-link {
-  color: white;
-}
-
-.nav-link:hover{
-  color: rgb(255, 255, 255);
-}
-.nombre{
-  padding: 10px;
-  color: white;
-  font-size: 25px;
-  font-family: 'Lobster',sans-serif;
-}
-
-.menu-icon {
-  cursor: pointer;
-  display: none;
-}
-
-.menu-icon .bar {
-  width: 20px;
-  height: 3px;
-  background-color: white;
-  margin: 6px 0;
-}
-
-/* Estilos para mostrar el menú cuando isMenuOpen es verdadero */
-.show-menu .menu-icon {
-  display: block;
-}
-
-.show-menu .nav {
-  display: flex;
-  flex-direction: column;
-}
-
-.show-menu .nav-item {
-  margin: 10px 0;
-}
-
-/* Estilos para el menú hamburguesa en pantallas más pequeñas (500px o menos) */
-@media (max-width: 700px) {
-  .navbar {
-    display: flex;
-    justify-content: space-between;
+  
+  /* Estilos para el menú hamburguesa */
+  .nav .nav-item {
+    cursor: pointer;
+    margin-bottom: 5px;
   }
-
-  .nav {
-    display: none;
+  
+  .nav-link {
+    color: white;
   }
-
+  
+  .nav-link:hover{
+    color: rgb(14, 13, 13);
+  }
+  
+  .nombre{
+    padding: 10px;
+    color: white;
+    font-size: 25px;
+    font-family: 'Lobster',sans-serif;
+  }
+  
   .menu-icon {
     cursor: pointer;
-    display: block;
-    margin-right: 20px;
+    display: none;
   }
-
-  /* Estilos para mostrar el menú en pantallas pequeñas */
+  
+  .menu-icon .bar {
+    width: 20px;
+    height: 3px;
+    background-color: white;
+    margin: 6px 0;
+  }
+  
+  /* Estilos para mostrar el menú cuando isMenuOpen es verdadero */
+  .show-menu .menu-icon {
+    display: block;
+  }
+  
   .show-menu .nav {
     display: flex;
     flex-direction: column;
   }
-
+  
   .show-menu .nav-item {
-    margin: 0px 0;
+    margin: 10px 0;
   }
-
-  .show-menu{
-    display: block;
+  
+  /* Estilos para el menú hamburguesa en pantallas más pequeñas (500px o menos) */
+  @media (max-width: 700px) {
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+    }
+  
+    .nav {
+      display: none;
+    }
+  
+    .menu-icon {
+      cursor: pointer;
+      display: block;
+      margin-right: 20px;
+    }
+  
+    /* Estilos para mostrar el menú en pantallas pequeñas */
+    .show-menu .nav {
+      display: flex;
+      flex-direction: column;
+    }
+  
+    .show-menu .nav-item {
+      margin: 0px 0;
+    }
+  
+    .show-menu{
+      display: block;
+    }
   }
-}
-
-
-/* Estilo del dropdown */
-.otro {
-  color: #008a88;
-}
-button {
-  color: #fff;
-}
-
-.dropdown-content {
-  display: none;
-  margin-top: 06px;
-  position: absolute;
-  min-width: 160px;
-  border-radius: 10px; /* Añadido para esquinas redondas */
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  cursor: pointer;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-  left: -110px;
-}
-
-.dropdown-button {
+  
+  /* Estilo del dropdown */
+  .otro {
+    color: #008a88;
+  }
+  button {
+    color: #fff;
+  }
+  
+  .dropdown-content { 
+    margin-top: 7px;
+    position: absolute;
+    right: 0;
+    margin-right: 5px;
+    background-color: #fff; /* Color de fondo */
+    border: 1px solid #ccc; /* Borde del menú */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    border-radius: 10px; 
     padding: 10px;
-    font-size: 16px;
-    border: none;
-    background-color: #008a88;
-}
-
-.dropdown-item {
-  padding: 10px;
-  text-decoration: none;
-  display: block;
-  color: #333;
-}
-
-.dropdown-item:hover {
-  background-color: #0f0f0f;
-}
-
+  }
+  
+  .dropdown-button {
+      padding: 10px;
+      font-size: 16px;
+      border: none;
+      background-color: #008a88;
+  }
+  
+  .dropdown-item {
+    padding: 10px;
+    text-decoration: none;
+    display: block;
+    color: #333;
+  }
+  
+  .dropdown-item:hover {
+    background-color: #070707;
+  }
+  
 @media screen and (max-width: 700px) {
   /* Estilos específicos para pantallas de 700 píxeles o menos */
   .titulo {
