cambios a modificar usuario y a listar instructores

--- a/sextoTrimestre/proyecto/src/app/components/sergio/statistics-instructores/statistics-instructores.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/statistics-instructores/statistics-instructores.component.html
@@ -4,7 +4,7 @@
   <div class="statistics-container">
     <h2>Estadísticas de Instructores</h2>
 
-    <form (ngSubmit)="applyFilters()" #filtroForm="ngForm">
+    <!-- <form (ngSubmit)="applyFilters()" #filtroForm="ngForm">
       <div class="filters">
         <label>Filtrar por Ficha:</label>
         <select [(ngModel)]="selectednumeroFicha" name="selectednumeroFicha" ngModel>
@@ -19,7 +19,7 @@
 
         <button type="submit">Aplicar Filtros</button>
       </div>
-    </form>
+    </form> -->
 
     <table class="custom-table">
       <thead>
