--- a/sextoTrimestre/proyecto/src/app/components/katalina/edit-password/edit-password.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/edit-password/edit-password.component.scss
@@ -173,3 +173,13 @@ input{
   width: 500px;
   border-radius: 10px;
 }
+
+/*Responsive*/
+
+@media (max-width: 700px) {
+  .contraseña {
+      margin-top: 20%;
+      margin-left: 20%;
+      height: auto;
+  }
+}
